--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,10 @@ name = "pypi"
 opencv-python = "*"
 opencv-contrib-python = "*"
 pillow = "*"
+streamlit = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
