--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "akazdayo", email = "82073147+akazdayo@users.noreply.github.com" },
 ]
 dependencies = [
-    "streamlit>=1.38.0",
+    "streamlit>=1.39.0",
     "opencv-python-headless>=4.10.0.84",
     "numpy>=2.1.1",
     "pillow>=10.4.0",
@@ -24,11 +24,7 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = [
-    "ruff>=0.5.1",
-    "opencv-python>=4.10.0.84",
-    "memray>=1.14.0",
-]
+dev-dependencies = ["ruff>=0.5.1", "opencv-python>=4.10.0.84"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
