--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,8 @@ requires-python = ">= 3.12"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
-managed = true
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ruff>=0.12.2",
     "opencv-python>=4.11.0.86",
     "watchdog>=6.0.0",
